--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "mbunge/php-application",
   "description": "This package provides an easy way to create a PHP Application.",
   "type": "library",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "authors": [
     {
       "name": "Marco Bunge",
@@ -13,7 +13,9 @@
   "license": "MIT",
   "scripts": {
     "release": "composer test && standard-version",
+    "prerelease": "composer test && standard-version -p",
     "release-dry": "composer test && standard-version --dry-run",
+    "prerelease-dry": "composer test && standard-version -p --dry-run",
     "deploy": "bash ./bin/canDeploy.sh && git merge develop && composer test && git push --follow-tags origin master && git push origin develop",
     "test": "composer run test:unit && composer run test:integration",
     "test:unit": "php vendor/bin/phpunit -c phpunit.unit.xml",
