fix(dev-workflow) Correct version bumping in composer.json.

--- a/.versionrc
+++ b/.versionrc
@@ -4,5 +4,11 @@
       "filename": "composer.json",
       "type": "json"
     }
+  ],
+  "bumpFiles": [
+    {
+      "filename": "composer.json",
+      "type": "json"
+    }
   ]
 }
